[gd_scene load_steps=2 format=3 uid="uid://b1fslux47hr6k"]

[ext_resource type="Script" uid="uid://dj42fxsgj2gb" path="res://tutorials/GetStarted/AddLeaderboard/leaderboard.gd" id="1_ic3p2"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ic3p2")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 367.0
offset_bottom = 35.0
theme_override_constants/margin_left = 100

[node name="V" type="VBoxContainer" parent="M"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="M/V"]
layout_mode = 2

[node name="ContainerForAdd" type="HBoxContainer" parent="M/V"]
layout_mode = 2

[node name="PlayerName" type="LineEdit" parent="M/V/ContainerForAdd"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Player name"
expand_to_text_length = true

[node name="Score" type="LineEdit" parent="M/V/ContainerForAdd"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Score"

[node name="AddScore" type="Button" parent="M/V/ContainerForAdd"]
layout_mode = 2
text = "Add score"

[connection signal="pressed" from="M/V/ContainerForAdd/AddScore" to="." method="_on_add_score_pressed"]
